@@ -15,6 +15,7 @@
   fix rw fopen + fread + WANT_FREAD_OPTIMIZATION silent file corruption (Emil)
   libm functions for x86_64 (Emil)
   add support for gcc 10's __attribute__((access(...)))
+  rename __noinline__ to __dontinline__ (__noline was also valid in gcc)
 
 0.34:
   move stpcpy from libcompat to lib as it is now part of POSIX (Enrico Scholz)
